Added missing include in okular_includes.h

BUG: 310221